[package]
name = "sunrise"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version =  "1.42.0", features = ["rt-multi-thread"] }
axum = { version = "0.8.0-rc.1", features = ["multipart", "tracing", "macros"] }
bytes = { version = "1.9.0", features = ["std"] }
blf_lib = { git = "https://github.com/Blam-Network/blf_lib.git", version = "1.4.5" }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "migrate", "uuid", "time", "chrono" ]}
binrw = "0.14.1"
serde-hex = { git = "https://github.com/Blam-Network/serde-hex.git", version = "0.1.0" }
serde_json = "1.0.128"
serde = {  version = "1.0.210", features = ["serde_derive"] }
serde-big-array = "0.5.1"
dotenv = "0.15.0"
once_cell = "1.20.2"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = {  version = "0.4.39", features = ["serde"] }
sunrise_private = { git = "https://github.com/Blam-Network/sunrise_private.git", optional = true }