[package]
name = "sunrise"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version =  "1.42.0", features = ["rt-multi-thread", "full"] }
axum = { version = "0.8.0-rc.1", features = ["multipart", "tracing", "macros"] }
bytes = { version = "1.9.0", features = ["std"] }
blf_lib = { git = "https://github.com/Blam-Network/blf_lib.git", version = "1.5.1"  }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "migrate", "uuid", "time", "chrono", "json" ]}
binrw = "0.14.1"
serde-hex = { git = "https://github.com/Blam-Network/serde-hex.git", version = "0.1.0" }
serde_json = "1.0.128"
serde = {  version = "1.0.210", features = ["serde_derive"] }
serde-big-array = "0.5.1"
dotenv = "0.15.0"
once_cell = "1.20.2"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = {  version = "0.4.39", features = ["serde"] }
sunrise_private = { path = "../sunrise_private", optional = true }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
hyper = "1.5.2"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tower = { version = "0.5.2", features = ["util"] }
image = { version =  "0.25.5", features = ["jpeg"] }
rustls = "0.23.20"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.10.1"
tokio-rustls = "0.26.1"
num = "0.4.3"
reqwest = "0.12.12"
ip2location = "0.5.4"

[features]
default = ["sunrise_private"]